get rid of a shortcut

--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
     });
 
     // Allow pressing the "a" key to add a node.
-    document.addEventListener('keydown', e => {
-      if(e.key.toLowerCase() === 'a'){
-        document.getElementById('addNode').click();
-      }
-    });
+    // document.addEventListener('keydown', e => {
+    //   if(e.key.toLowerCase() === 'a'){
+    //     document.getElementById('addNode').click();
+    //   }
+    // });
 
     // Utility functions to convert between world and screen coordinates.
     function worldToScreen(x, y) {
