--- a/index.html
+++ b/index.html
@@ -774,6 +774,19 @@
     });
     canvas.addEventListener('contextmenu', e => e.preventDefault());
 
+    // Zoom using the mouse wheel (centered on the cursor).
+    canvas.addEventListener('wheel', e => {
+      e.preventDefault();
+      const mousePos = { x: e.offsetX, y: e.offsetY };
+      const worldPosBefore = screenToWorld(mousePos.x, mousePos.y);
+      const zoomFactor = e.deltaY < 0 ? 1.01 : 0.91;
+      scale *= zoomFactor;
+      const worldPosAfter = screenToWorld(mousePos.x, mousePos.y);
+      offsetX += worldPosBefore.x - worldPosAfter.x;
+      offsetY += worldPosBefore.y - worldPosAfter.y;
+      draw();
+    });
+
     /* ========= Touch Event Handlers (for mobile) ========= */
     let touchMode = null; // "pan" or "pinch"
     let lastTouchPos = null;
